language/move-prover/tests/sources/functional/disable_inv.exp
Move prover returns: exiting with boogie verification errors
error: global memory invariant does not hold

    ┌── tests/sources/functional/disable_inv.move:60:9 ───
    │
 60 │         invariant [global] forall a: address where exists<R1>(a): exists<R2>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/disable_inv.move:11: f1_incorrect
    =         s = <redacted>
    =     at tests/sources/functional/disable_inv.move:12: f1_incorrect
    =     at tests/sources/functional/disable_inv.move:60

error: global memory invariant does not hold

    ┌── tests/sources/functional/disable_inv.move:60:9 ───
    │
 60 │         invariant [global] forall a: address where exists<R1>(a): exists<R2>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/disable_inv.move:31: f3_incorrect
    =         s = <redacted>
    =     at tests/sources/functional/disable_inv.move:32: f3_incorrect
    =     at tests/sources/functional/disable_inv.move:60
